# vulkro-labs

./: .editorconfig  .gitignore  .mcp.json  ATTRIBUTION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  install.sh
.claude-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
bench/fixtures/cardcheck/: clean-card.json  impersonation-card.json
crates/vulkro-feeds/: Cargo.toml  README.md
crates/vulkro-feeds/src/: crates_io.rs  ecosystem.rs  http.rs  lib.rs  mcp_manifest.rs  npm.rs  osv.rs  pypi.rs  registry.rs
skills/audit/: SKILL.md
skills/cardcheck/: SKILL.md
skills/drift/: SKILL.md
skills/foresee/: SKILL.md
skills/inspect/: SKILL.md
skills/memcheck/: SKILL.md
skills/provenance/: SKILL.md
skills/skillscan/: SKILL.md
skills/trustdb/: SKILL.md
skills/verify/: SKILL.md
skills/warden/: SKILL.md
src/: main.rs  sarif.rs  upsell.rs
src/audit/: mod.rs  secrets.rs  settings.rs  snapshot.rs
src/cardcheck/: card.rs  mod.rs  nameguard.rs
src/foresee/: mod.rs
src/inspect/: mod.rs
src/lock/: mod.rs
src/mcp/: mod.rs
src/memcheck/: mod.rs
src/provenance/: mod.rs
src/skillscan/: mod.rs
src/trust/: command.rs  fingerprint.rs  mod.rs
src/verify/: lockfile.rs  lookalike.rs  manifest.rs  mod.rs  report.rs  verdict.rs
src/warden/: checks.rs  mod.rs  report.rs
